--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "axios": "^1.7.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-redux": "^9.1.2"
+    "react-redux": "^9.1.2",
+    "react-router-dom": "^6.26.2"
   },
   "devDependencies": {
     "@testing-library/dom": "^9.3.4",
